--- a/templates/multiauthonepage.twig
+++ b/templates/multiauthonepage.twig
@@ -17,7 +17,7 @@
     </div>
     {% endif -%}
 
-    {% if errorCode != null %}
+    {% if errorTitle != null %}
     <div class="message-box error">
         <h3>{{ errorTitle }}</h3>
         <p>{{ errorDesc }}</p>
